# anvil_env

./: .anvil_editor.yaml  README.md  anvil.yaml  pyproject.toml
client_code/Form1/: __init__.py
client_code/_README/: __init__.py  form_template.yaml
server_code/: environ.py
server_code/_testing/: test.py
server_code/_testing/tests/: _example.py  conftest.py  environ.py  models.py  src.py
server_code/environ/: __init__.py  models.py  src.py
server_code/tests/: environ.py
